--- a/edar.html
+++ b/edar.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="main"></div>
+  <div class="main"> <img src="" alt=""></div>
   
 </body>
 </html>
